feat(test): added tests